Cambios en el Carousel de Negocios de todo tipo

--- a/about.html
+++ b/about.html
@@ -22,6 +22,13 @@
         content="Conoce GISEA, tu agencia digital internacional. Descubre nuestros valores, las tecnologías que dominamos y los clientes globales que confían en nuestro trabajo.">
     <meta name="twitter:image" content="https://giseamex.com/img/Header-About%20Us.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="img/logo_GISEA.png">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
