--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -19,6 +19,13 @@
     <meta name="twitter:description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo.">
     <meta name="twitter:image" content="img/header_desarollo_web.jpg">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="img/logo_GISEA.png">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
