--- a/servicios_gisea/empresas_grandes_corp.html
+++ b/servicios_gisea/empresas_grandes_corp.html
@@ -38,6 +38,13 @@
     <!-- Imagen en Twitter (1200x600px recomendado) -->
     <meta name="twitter:image" content="https://giseamex.com/img/servicios/empresas_grandes.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
@@ -232,32 +239,57 @@
             <div class="owl-carousel owl-theme packages-carousel">
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/empresas-medianas/negocios_med_1.png"
-                            alt="Paquete Empresas Medianas 1" class="package-image">
+                        <img src="../img/servicios/empresas-grandes/negocios_grandes_1.jpg"
+                            alt="Corporativo Multinacional" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Corporativo Multinacional</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/empresas-medianas/negocios_med_2.png"
-                            alt="Paquete Empresas Medianas 2" class="package-image">
+                        <img src="../img/servicios/empresas-grandes/negocios_grandes_2.jpg"
+                            alt="Holding Empresarial" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Holding Empresarial</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/empresas-medianas/negocios_med_3.jpg"
-                            alt="Paquete Empresas Medianas 3" class="package-image">
+                            alt="Hospital Privado" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Hospital Privado</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/empresas-medianas/negocios_med_4.jpg"
-                            alt="Paquete Empresas Medianas 4" class="package-image">
+                            alt="Universidad Privada" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Universidad Privada</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/negocios-pequenos/negocios_peq_2.png"
-                            alt="Paquete Negocios Pequeños 2" class="package-image">
+                            alt="Banco Regional" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Banco Regional</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -302,6 +334,9 @@
                         <li>Correo corporativo (3)</li>
                         <li>10 imágenes por sección (imágenes extra con costo adicional)</li>
                         <li>Código optimizado para rapidez de carga de sus páginas</li>
+                        <li><strong>Modo oscuro:</strong> Costo adicional de $1,500 MXN</li>
+                        <li><strong>Versión en inglés:</strong> Costo adicional de $4,500 MXN</li>
+                        <li><strong>Idiomas adicionales:</strong> $3,000 MXN por cada idioma extra</li>
                     </ul>
                 </div>
 
