--- a/servicios_gisea/empresas_medianas.html
+++ b/servicios_gisea/empresas_medianas.html
@@ -87,6 +87,13 @@
          • El texto debe ser legible incluso en tamaño pequeño -->
     <meta name="twitter:image" content="https://giseamex.com/img/servicios/empresas_medianas.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
@@ -281,32 +288,57 @@
             <div class="owl-carousel owl-theme packages-carousel">
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/empresas-medianas/negocios_med_1.png"
-                            alt="Paquete Empresas Medianas 1" class="package-image">
+                        <img src="../img/servicios/empresas-medianas/negocios_med_1.jpg"
+                            alt="Seguridad Privada" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Seguridad Privada</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/empresas-medianas/negocios_med_2.png"
-                            alt="Paquete Empresas Medianas 2" class="package-image">
+                            alt="Arquitectos" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Arquitectos</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/empresas-medianas/negocios_med_3.jpg"
-                            alt="Paquete Empresas Medianas 3" class="package-image">
+                            alt="Dentistas" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Dentistas</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/empresas-medianas/negocios_med_4.jpg"
-                            alt="Paquete Empresas Medianas 4" class="package-image">
+                            alt="Psicologos" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Psicólogos</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/negocios-pequenos/negocios_peq_2.png"
-                            alt="Paquete Negocios Pequeños 2" class="package-image">
+                        <img src="../img/servicios/empresas-medianas/negocios_med_5.jpg"
+                            alt="Medicos y Consultorios" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Medicos y Consultorios</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -351,6 +383,10 @@
                         <li>Correo corporativo (3)</li>
                         <li>10 imágenes por sección (imágenes extra con costo adicional)</li>
                         <li>Código optimizado para rapidez de carga de sus páginas</li>
+                        <li>1 cambio de información al mes <strong>(PLUS: con nosotros puedes acumular tus cambios si no los usas)</strong></li>
+                        <li><strong>Modo oscuro:</strong> Costo adicional de $1,500 MXN</li>
+                        <li><strong>Versión en inglés:</strong> Costo adicional de $4,500 MXN</li>
+                        <li><strong>Idiomas adicionales:</strong> $3,000 MXN por cada idioma extra</li>
                     </ul>
                 </div>
 
@@ -360,8 +396,8 @@
                         <h3 class="sidebar-title">CONOCE NUESTROS PAQUETES</h3>
 
                         <!-- Card paquete 1 -->
-                        <a href="empresas_medianas.html" class="pkg-card d-flex align-items-center gap-3">
-                            <img src="../img/servicios/empresas_medianas.png" alt="Empresas medianas" class="pkg-thumb">
+                        <a href="negocios_pequenos.html" class="pkg-card d-flex align-items-center gap-3">
+                            <img src="../img/servicios/negocios_pequenos.png" alt="Empresas medianas" class="pkg-thumb">
                             <div class="pkg-body">
                                 <div class="pkg-subtitle">Negocios Pequeños</div>
                                 <div class="pkg-price">$3,000 MXN</div>
