--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -20,6 +20,13 @@
     <meta name="twitter:description" content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
     <meta name="twitter:image" content="https://giseamex.com/img/servicios/influencers/header-influencers.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
