--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -20,6 +20,13 @@
     <meta name="twitter:description" content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
     <meta name="twitter:image" content="https://giseamex.com/img/web-service/negocios_pequenos.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
@@ -215,31 +222,56 @@
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/negocios-pequenos/negocios_peq_1.png"
-                            alt="Paquete Negocios Pequeños 1" class="package-image">
+                            alt="Emprendimientos" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Emprendimientos</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/negocios-pequenos/negocios_peq_2.png"
                             alt="Paquete Negocios Pequeños 2" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Barbería</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/negocios-pequenos/negocios_peq_3.png"
                             alt="Paquete Negocios Pequeños 3" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Restaurante</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
                         <img src="../img/servicios/negocios-pequenos/negocios_peq_4.jpg"
-                            alt="Paquete Negocios Pequeños 1" class="package-image">
+                            alt="Paquete Negocios Pequeños 4" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Florerias</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/negocios-pequenos/negocios_peq_2.png"
-                            alt="Paquete Negocios Pequeños 2" class="package-image">
+                        <img src="../img/servicios/negocios-pequenos/negocios_peq_5.jpg"
+                            alt="Paquete Negocios Pequeños 5" class="package-image">
+                        <div class="package-overlay">
+                            <div class="package-text">
+                                <h4>Hojalateria y Pintura</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -284,6 +316,9 @@
                         <li>Correo corporativo (3)</li>
                         <li>10 imágenes por sección (extra con costo)</li>
                         <li>Código optimizado para rapidez de carga</li>
+                        <li><strong>Modo oscuro:</strong> Costo adicional de $1,500 MXN</li>
+                        <li><strong>Versión en inglés:</strong> Costo adicional de $4,500 MXN</li>
+                        <li><strong>Idiomas adicionales:</strong> $3,000 MXN por cada idioma extra</li>
                     </ul>
                 </div>
 
