--- a/servicios_gisea/produccion_digital.html
+++ b/servicios_gisea/produccion_digital.html
@@ -52,6 +52,13 @@
     <!-- Imagen en Twitter (1200x600px recomendado) -->
     <meta name="twitter:image" content="https://giseamex.com/img/servicios/produccion_digital.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <!-- === META TAGS ADICIONALES === -->
     <!-- Robots - Instrucciones para motores de búsqueda -->
     <meta name="robots" content="index, follow">
