--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     <!-- Creador del contenido -->
     <meta name="twitter:creator" content="@giseaagency">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="img/logo_GISEA.png">
+
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
@@ -309,7 +316,7 @@
         <div class="container text-center my-5">
             <div class="row services-cards">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
-                    <a href="index.html" class="card service-card">
+                    <a href="./service_desarollo_web.html" class="card service-card">
                         <img src="img/card-img/imagen_desarollo_web.jpg" class="card-img-top" alt="Desarrollo Web">
                         <div class="card-body">
                             <div class="title-icon-container">
@@ -320,7 +327,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up">
-                    <a href="" class="card service-card">
+                    <a href="./servicios_gisea/recursos_humanos.html" class="card service-card">
                         <img src="img/card-img/img_recursos_humanos.jpeg" class="card-img-top" alt="Recursos Humanos">
                         <div class="card-body">
                             <div class="title-icon-container">
@@ -331,7 +338,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up">
-                    <a href="" class="card service-card">
+                    <a href="./servicios_gisea/capacitacion_it.html" class="card service-card">
                         <img src="img/card-img/imagen_cap_programadores.jpg" class="card-img-top"
                             alt="Capacitación Programadores">
                         <div class="card-body">
