--- a/servicios_gisea/capacitacion_it.html
+++ b/servicios_gisea/capacitacion_it.html
@@ -19,6 +19,13 @@
     <meta name="twitter:description" content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
     <meta name="twitter:image" content="https://giseamex.com/img/header-capacitacion-it.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
