--- a/servicios_gisea/recursos_humanos.html
+++ b/servicios_gisea/recursos_humanos.html
@@ -19,6 +19,13 @@
     <meta name="twitter:description" content="Nos especializamos en reclutamiento, evaluación de desempeño y capacitación de talento para empresas en México y a nivel internacional.">
     <meta name="twitter:image" content="https://giseamex.com/img/header_recursos_humanos.png">
 
+    <!-- === FAVICON === -->
+    <!-- Icono para pestaña del navegador -->
+    <link rel="icon" type="image/png" href="../img/logo_GISEA.png">
+    <link rel="shortcut icon" type="image/png" href="../img/logo_GISEA.png">
+    <!-- Icono para Apple devices -->
+    <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
+
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
