--- a/about.html
+++ b/about.html
@@ -39,9 +39,8 @@
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg estilos-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/logo_final.png" alt="Gisea" class="gisea-logo">
-                    <a href="index.html"></a>
                 </a>
                 <!--MENU DE HAMBURGESA-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -587,6 +586,10 @@
             </div>
         </div>
     </footer>
+    <!-- Botón Scroll to Top -->
+    <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
+        <i class="fa-solid fa-chevron-up"></i>
+    </button>
     <script src="js/index.js"></script>
     <script src="js/aos/aos.js"></script>
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
