--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -27,62 +27,26 @@
     <link rel="apple-touch-icon" href="img/logo_GISEA.png">
 
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/fontawesome/all.min.css">
-    <link rel="stylesheet" href="./css/aos/aos.css">
-    <link rel="stylesheet" href="/css/glightbox/glightbox.min.css">
-    <link rel="stylesheet" href="/css/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/fontawesome/all.min.css">
+    <link rel="stylesheet" href="css/aos/aos.css">
+    <link rel="stylesheet" href="css/glightbox/glightbox.min.css">
+    <link rel="stylesheet" href="css/swiper/swiper-bundle.min.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Archivo principal de estilos - debe ir al final para mayor especificidad -->
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 </head>
-<style>
-    @keyframes rotateIn {
-        0% {
-            transform: rotate(0deg);
-        }
-
-        50% {
-            transform: rotate(180deg);
-        }
-
-        100% {
-            transform: rotate(180deg);
-        }
-    }
-
-    @keyframes rotateOut {
-        0% {
-            transform: rotate(180deg);
-        }
-
-        50% {
-            transform: rotate(0deg);
-        }
-
-        100% {
-            transform: rotate(0deg);
-        }
-    }
-
-    .rotate-180 {
-        animation: rotateIn 0.5s ease-in-out forwards !important;
-    }
-
-    .rotate-0 {
-        animation: rotateOut 0.5s ease-in-out forwards !important;
-    }
-</style>
 
 <body>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg estilos-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/logo_final.png" alt="Gisea" class="gisea-logo">
                 </a>
                 <!--MENU DE HAMBURGESA-->
@@ -373,7 +337,7 @@
             </div>
             <div class="portafolio-container" data-aos="zoom-in-up">
                 <div class="portafolio-title">
-                    <h2>27</h2>
+                    <h2>72</h2>
                     <h3 data-translate="portfolioClientsSatisfied">Clientes <br> Satisfechos</h3>
                 </div>
                 <div class="portafolio-title">
@@ -796,6 +760,12 @@
             </div>
         </footer>
     </section>
+    
+    <!-- Botón Scroll to Top -->
+    <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
+        <i class="fa-solid fa-chevron-up"></i>
+    </button>
+    
     <script src="js/index.js"></script>
     <script src="js/portafolio.js"></script>
     <script src="js/aos/aos.js"></script>
