--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -28,7 +28,6 @@
     <link rel="apple-touch-icon" href="../img/logo_GISEA.png">
 
     <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/fontawesome/all.min.css">
     <link rel="stylesheet" href="../css/aos/aos.css">
     <link rel="stylesheet" href="../css/glightbox/glightbox.min.css">
@@ -37,50 +36,15 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- Archivo principal de estilos - debe ir al final para mayor especificidad -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<style>
-    @keyframes rotateIn {
-        0% {
-            transform: rotate(0deg);
-        }
-
-        50% {
-            transform: rotate(180deg);
-        }
-
-        100% {
-            transform: rotate(180deg);
-        }
-    }
-
-    @keyframes rotateOut {
-        0% {
-            transform: rotate(180deg);
-        }
-
-        50% {
-            transform: rotate(0deg);
-        }
-
-        100% {
-            transform: rotate(0deg);
-        }
-    }
-
-    .rotate-180 {
-        animation: rotateIn 0.5s ease-in-out forwards !important;
-    }
-
-    .rotate-0 {
-        animation: rotateOut 0.5s ease-in-out forwards !important;
-    }
-</style>
 
 <body>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg estilos-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo_final.png" alt="Gisea" class="gisea-logo">
                 </a>
                 <!--MENU DE HAMBURGESA-->
@@ -444,6 +408,11 @@
             </div>
         </div>
     </footer>
+
+    <!-- Botón Scroll to Top -->
+    <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
+        <i class="fa-solid fa-chevron-up"></i>
+    </button>
 
     <!-- Scripts -->
     <script src="../js/bootstrap/bootstrap.bundle.min.js"></script>
