Cambio en el carousel de servicios sin hover para aparicion de texto y pestañas traduccidas

--- a/servicios_gisea/empresas_grandes_corp.html
+++ b/servicios_gisea/empresas_grandes_corp.html
@@ -310,8 +310,8 @@
                         <h3 class="sidebar-title">CONOCE NUESTROS PAQUETES</h3>
 
                         <!-- Card paquete 1 -->
-                        <a href="empresas_medianas.html" class="pkg-card d-flex align-items-center gap-3">
-                            <img src="../img/servicios/negocios_pequenos.png" alt="Empresas medianas" class="pkg-thumb">
+                        <a href="negocios_pequenos.html" class="pkg-card d-flex align-items-center gap-3">
+                            <img src="../img/servicios/negocios_pequenos.png" alt="Negocios Pequeños" class="pkg-thumb">
                             <div class="pkg-body">
                                 <div class="pkg-subtitle">Negocios Pequeños</div>
                                 <div class="pkg-price">$3,000 MXN</div>
@@ -319,8 +319,8 @@
                         </a>
 
                         <!-- Card paquete 2 -->
-                        <a href="empresas_grandes_corp.html" class="pkg-card d-flex align-items-center gap-3">
-                            <img src="../img/servicios/empresas_grandes_corporativos.png" alt="Empresas grandes"
+                        <a href="empresas_medianas.html" class="pkg-card d-flex align-items-center gap-3">
+                            <img src="../img/servicios/empresas_medianas.png" alt="Empresas grandes"
                                 class="pkg-thumb">
                             <div class="pkg-body">
                                 <div class="pkg-subtitle">Empresas Medianas</div>
