Agregando boton de portafolio

--- a/about.html
+++ b/about.html
@@ -544,6 +544,19 @@
                                     style="width: 78px; margin-top: -33px;">
                             </div>
                         </div>
+                        <!-- Botón Portafolio -->
+                        <div class="row justify-content-center mt-5">
+                            <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+                                <a href="service_desarollo_web.html#portafolio-web" 
+                                   class="btn btn-portfolio w-100 py-3" 
+                                   data-aos="fade-up"
+                                   data-bs-toggle="tooltip" 
+                                   data-bs-placement="top" 
+                                   title="Da click para conocer nuestros proyectos">
+                                    <span data-translate="portfolioButton">Portafolio</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
