Cambios en Precios y Tipografia

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -165,7 +165,7 @@
             <div class="text-left">
                 <h1 data-translate="serviceHeaderTitle">DESAROLLO WEB</h1>
                 <p data-translate="serviceHeaderSubtitle">Contamos con paquetes desde:</p>
-                <h2 data-translate="serviceHeaderPrice">$3,000 MXN</h2>
+                <h2 data-translate="serviceHeaderPrice">$4,000 MXN</h2>
             </div>
             <div class="text-right">
                 <ul>
@@ -194,11 +194,11 @@
                     <div class="pricing-card" id="negocios-pequeños">
                         <img src="img/web-service/negocios_pequenos.png" alt="Paquete Negocios Pequeños">
                         <h2 data-translate="packageSmallBusinessTitle">NEGOCIOS PEQUEÑOS</h2>
-                        <div class="price" data-translate="packageSmallBusinessPrice">DESDE $3,000 MXN</div>
+                        <div class="price" data-translate="packageSmallBusinessPrice">DESDE $4,500 MXN</div>
                         <ul>
-                            <li class="d-flex align-items-center justify-content-between">
+                            <li class="d-flex align-items-center justify-content-between hosting-highlight">
                                 <div class="feature-text-container">
-                                    <span data-translate="packageFeatureHosting">Hospedaje por 3 AÑOS</span>
+                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio y Hosting</span>
                                 </div>
                                 <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
                             </li>
@@ -237,11 +237,11 @@
                     <div class="pricing-card" id="empresas-medianas">
                         <img src="img/web-service/empresas_medianas.png" alt="Paquete Empresas Medianas">
                         <h2 data-translate="packageMediumBusinessTitle">EMPRESAS MEDIANAS</h2>
-                        <div class="price" data-translate="packageMediumBusinessPrice">DESDE $6,000 MXN</div>
+                        <div class="price" data-translate="packageMediumBusinessPrice">DESDE $9,000 MXN</div>
                         <ul>
-                            <li class="d-flex align-items-center justify-content-between">
+                            <li class="d-flex align-items-center justify-content-between hosting-highlight">
                                 <div class="feature-text-container">
-                                    <span data-translate="packageFeatureHosting">Hospedaje por 3 AÑOS</span>
+                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio y Hosting</span>
                                 </div>
                                 <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
                             </li>
@@ -284,11 +284,11 @@
                     <div class="pricing-card" id="empresas-grandes">
                         <img src="img/web-service/empresas_grandes_corporativos.png" alt="Paquete Empresas Grandes">
                         <h2 data-translate="packageLargeBusinessTitle">EMPRESAS GRANDES O CORPORATIVOS</h2>
-                        <div class="price" data-translate="packageLargeBusinessPrice">DESDE $9,999 MXN</div>
+                        <div class="price" data-translate="packageLargeBusinessPrice">DESDE $15,000 MXN</div>
                         <ul>
-                            <li class="d-flex align-items-center justify-content-between">
+                            <li class="d-flex align-items-center justify-content-between hosting-highlight">
                                 <div class="feature-text-container">
-                                    <span data-translate="packageFeatureHosting">Hospedaje por 3 AÑOS</span>
+                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio y Hosting</span>
                                 </div>
                                 <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
                             </li>
