--- a/servicios_gisea/empresas_grandes_corp.html
+++ b/servicios_gisea/empresas_grandes_corp.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" href="../OwlCarousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../OwlCarousel/dist/assets/owl.theme.default.css">
 
-    <!-- Estilos específicos para Negocios Pequeños -->
+    <!-- Estilos específicos para Negocios en General -->
     <link rel="stylesheet" href="../css/servicios/negocios-pequenos.css">
 
     <!-- Bootstrap Icons -->
@@ -263,7 +263,7 @@
         <div class="container-lg">
             <div class="section-title-revamped">
                 <h1 class="precio-iva">
-                    <span class="precio-principal">DESDE $9,999 MXN</span>
+                    <span class="precio-principal">DESDE $15,000 MXN</span>
                     <span class="iva-text">+IVA</span>
                 </h1>
                 <a href="#" class="btn-ordena-ya">¡ ORDENA YA !</a>
@@ -286,6 +286,7 @@
                 <!-- IZQUIERDA: lista en dos columnas -->
                 <div class="col-lg-8">
                     <ul class="features-list">
+                        <li class="hosting-highlight">3 años de Dominio y Hosting</li>
                         <li>1 propuesta de diseño nivel profesional</li>
                         <li>1 página de información</li>
                         <li>1 formulario de contacto</li>
