--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="../OwlCarousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../OwlCarousel/dist/assets/owl.theme.default.css">
 
-    <!-- Estilos específicos para Negocios Pequeños -->
+    <!-- Estilos específicos para Negocios En General -->
     <link rel="stylesheet" href="../css/servicios/negocios-pequenos.css">
 
     <!-- Bootstrap Icons -->
@@ -245,7 +245,7 @@
         <div class="container-lg">
             <div class="section-title-revamped">
                 <h1 class="precio-iva">
-                    <span class="precio-principal">DESDE $3,000 MXN</span>
+                    <span class="precio-principal">DESDE $4,5000 MXN</span>
                     <span class="iva-text">+IVA</span>
                 </h1>
                 <a href="#" class="btn-ordena-ya">¡ ORDENA YA !</a>
@@ -268,6 +268,7 @@
                 <!-- IZQUIERDA: lista en dos columnas -->
                 <div class="col-lg-8">
                     <ul class="features-list">
+                        <li class="hosting-highlight">3 años de Dominio y Hosting</li>
                         <li>1 propuesta de diseño nivel profesional</li>
                         <li>1 página de información</li>
                         <li>1 formulario de contacto</li>
@@ -296,7 +297,7 @@
                             <img src="../img/servicios/empresas_medianas.png" alt="Empresas medianas" class="pkg-thumb">
                             <div class="pkg-body">
                                 <div class="pkg-subtitle">Empresas medianas</div>
-                                <div class="pkg-price">$6,000 MXN</div>
+                                <div class="pkg-price">$9,000 MXN</div>
                             </div>
                         </a>
 
@@ -306,7 +307,7 @@
                                 class="pkg-thumb">
                             <div class="pkg-body">
                                 <div class="pkg-subtitle">Empresas grandes o corporativos</div>
-                                <div class="pkg-price">$9,999 MXN</div>
+                                <div class="pkg-price">$15,000 MXN</div>
                             </div>
                         </a>
                     </div>
