Agregando icono de youtube

--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -137,6 +137,10 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
+                                        class="red-social youtube">
+                                        <i class="fa-brands fa-youtube fa-xl"></i>
+                                    </a>
                                 </div>
                                 <button id="toggle-dark-mode" class="btn-cambio-idioma" title="Cambiar tema">
                                     <span id="icon-theme">
@@ -754,6 +758,10 @@
                         <a href="https://www.facebook.com/grupogisea" target="_blank" alt="facebook"
                             class="red-social-footer">
                             <i class="fa-brands fa-facebook fa-xl"></i>
+                        </a>
+                        <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
+                            class="red-social-footer">
+                            <i class="fa-brands fa-youtube fa-xl"></i>
                         </a>
                     </div>
                 </div>
