Agregando Informacion card Profe rick

--- a/about.html
+++ b/about.html
@@ -285,16 +285,22 @@
                                                     <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z"/>
                                                     <circle cx="12" cy="10" r="3"/>
                                                 </svg>
-                                                México, Estados Unidos, España
+                                                México y todo el Mundo
                                             </div>
                                             <div class="profile-card-contact">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
                                                     <path d="M22 6l-10 7L2 6"/>
                                                 </svg>
-                                                lia@giseamex.com
+                                                <a href="mailto:iegarridoc19@gmail.com?subject=Solicitud%20de%20Colaboración&body=Hola%20Lía,%0A%0AMe%20gustaría%20solicitar%20información%20sobre%20colaboraciones.%0A%0ASaludos" class="contact-email-link">
+                                                    iegarridoc19@gmail.com
+                                                </a>
                                             </div>
-                                            <button class="profile-contact-me">TRABAJEMOS JUNTOS</button>
+                                            <a href="https://wa.me/5215511234567?text=Hola%20Lía,%20me%20gustaría%20información%20sobre%20colaboraciones" 
+                                            target="_blank" class="btn btn-follow btn-contact-mobile text-center profile-contact-me">
+                                                <i class="bi bi-whatsapp me-2"></i>
+                                                TRABAJEMOS JUNTOS
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -348,18 +354,22 @@
                                 <div class="profile-card-section" id="experience-rick">
                                     <div class="profile-card-content">
                                         <div class="profile-card-subtitle">EXPERIENCIA</div>
-                                        <div class="profile-card-timeline">
-                                            <div class="profile-card-item" data-year="2016">
-                                                <div class="profile-card-item-title">Profesor de <span>Desarrollo Web</span></div>
-                                                <div class="profile-card-item-desc">Educación en tecnologías web modernas y frameworks.</div>
+                                        <div class="profile-card-experience-list">
+                                            <div class="experience-item">
+                                                <h4>Fundador de GISEA <img src="img/logo_GISEA.png" alt="GISEA" class="inline-logo"></h4>
+                                                <p>Fundador y visionario de <b>GISEA</b>, desarrollando soluciones tecnológicas innovadoras y liderando el crecimiento de la empresa desde sus inicios.</p>
                                             </div>
-                                            <div class="profile-card-item" data-year="2018">
-                                                <div class="profile-card-item-title">Co-fundador en <span>GISEA</span></div>
-                                                <div class="profile-card-item-desc">Desarrollo de la plataforma tecnológica de la empresa.</div>
+                                            <div class="experience-item">
+                                                <h4>Profesor en SUPERPROF</h4>
+                                                <p>Profesor #1 en <b>Programación</b> en la plataforma SUPERPROF, brindando educación de alta calidad en tecnologías de desarrollo web y programación.</p>
+                                                <div class="media-logos">
+                                                    <img src="img/team/logo_superprof.png" alt="Superprof" class="media-logo">
+                                                    <img src="img/team/insignia_icono.png" alt="Insignia #1" class="media-logo insignia-icon">
+                                                </div>
                                             </div>
-                                            <div class="profile-card-item" data-year="2020">
-                                                <div class="profile-card-item-title">CTO en <span>GISEA</span></div>
-                                                <div class="profile-card-item-desc">Liderazgo técnico y arquitectura de sistemas escalables.</div>
+                                            <div class="experience-item">
+                                                <h4>Desarrollo Web y Tecnología</h4>
+                                                <p><b>Senior Frontend Developer</b> especialista en <b>desarrollo web moderno</b>, con experiencia en frameworks avanzados y arquitectura de sistemas escalables.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -382,7 +392,11 @@
                                                 </svg>
                                                 rick@giseamex.com
                                             </div>
-                                            <button class="profile-contact-me">COLABOREMOS</button>
+                                            <a href="https://wa.me/5215511234567?text=Hola%20Rick,%20me%20gustaría%20información%20sobre%20colaboraciones%20y%20desarrollo%20web" 
+                                            target="_blank" class="btn btn-follow btn-contact-mobile text-center profile-contact-me">
+                                                <i class="bi bi-whatsapp me-2"></i>
+                                                COLABOREMOS
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
